# sim_a_splat

./: .gitattributes  .gitignore  README.md  collect_sim_demonstrations.py  demo_joint_sliders_splat.py  demo_pusht_scara.py  demo_pusht_splat.py  demo_pusht_splat_scara.py  match_splat.py  pixi.toml  pixi.toml.bak  pyproject.toml  render_sim_demonstrations.py  setup.cfg  test_camera_render.py  test_gsplat_render.py  test_load_gym_env.py  test_playwright_render.py  test_xarm_with_gripper.py  visualise_dataset.py
assets/bricks/: foam_brick.sdf
assets/divar113vhw/: sparse_pc.ply  transforms.json
assets/robots-scene-v2/: transforms.json
assets/tblock_paper/: scaled_tblock.sdf  tblock_paper.mtl  tblock_paper.sdf
examples/: demo_hw_splat.py  demo_joint_sliders_splat.py  demo_pusht_splat.py
robot_description/divar113vhw/: CMakeLists.txt  package.xml
robot_description/divar113vhw/launch/: display.launch  gazebo.launch
robot_description/divar113vhw/meshes/: base_link.STL  divar113vhw.urdf  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
robot_description/divar113vhw/urdf/: divar113vhw.csv
robot_description/scara/: CMakeLists.txt  package.xml
robot_description/scara/launch/: display.launch  gazebo.launch
robot_description/scara/meshes/: gripper.STL  (+5 more)
sim_a_splat/: __init__.py
sim_a_splat/env/: __init__.py
sim_a_splat/messaging/: __init__.py  geom.py  link.py
sim_a_splat/ns_utils/: nerfstudio_utils.py
sim_a_splat/splat/: splat_handler.py  splat_utils.py
tests/: test_eef_splat_wrapper.py  test_eef_wrapper.py  test_gym_env.py  test_splat_wrapper.py
(+62 files in other folders)
