[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_a_splat"
version = "0.1.0"
description = "Simulation and Splat utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
{name = "akhilsat"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

dependencies = [

]

[tool.setuptools]
packages = ["sim_a_splat"]

[tool.setuptools.package-data]
"sim_a_splat" = ["**/*.stl", "**/*.urdf", "**/*.yaml"]