[metadata]
name = sim_a_splat
version = 0.1.0
description = Simulation and Splat utilities
license = MIT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = .
# include = utils*

[options.package_data]
* = *.yaml, *.urdf, *.stl, *.obj, *.mtl, *.png, *.jpg

